--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,5 +1,15 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h3>{{data.name}}</h3>
+<ul>
+    <li>
+        <div>
+            <h1></h1>
+            <p></p>
+            <p></p>
+            <a href=""></a>
+        </div>
+    </li>
+</ul>
+
 {% endblock %}
