--- a/app/views/index.html
+++ b/app/views/index.html
@@ -2,14 +2,16 @@
 
 {% block content %}
 <ul>
-    <li>
-        <div>
-            <h1></h1>
-            <p></p>
-            <p></p>
-            <a href=""></a>
+    {% for val in list%}
+    <li style="display: inline-block;border: 1px solid gray">
+        <div >
+            <h1>{{val.title}}</h1>
+            <p>{{val.content}}</p>
+            <p>{{val.createtime|date('Y-m-d H:i:s')}}</p>
+            <a href="/index/detail/id/{{val.id}}">查看全部内容</a>
+            <a href="/index/del/id/{{val.id}}">删除留言</a>
         </div>
     </li>
+    {% endfor %}
 </ul>
-
 {% endblock %}
